[metadata]
name = htnhello
version = 1.2.0
description = Hello World for Nexus PyPI.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kynthus/htnpython
author = Kynthus Aueoau,
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires = kafka

[options.entry_points]
console_scripts = htnhello = htnhello.greet:hello
